# prosophor

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_cn.md  Theoretical Foundations of Proactive Interactive Agents.md  Whitepaper abount Plugin-Based Proactive Multimodal Interaction Trigger Architecture.md  Whitepaper about Plugin-Based Proactive Multimodal Interaction Trigger Architecture.md  changelog.md  《Whitepaper abount Plugin-Based Proactive Multimodal Interaction Trigger Architecture》.md  《主动式交互 Agent 理论建设》.md  《基于插件化的主动式多模态交互触发架构白皮书》.md
config/.aicode/: settings.json
config/.aicode/roles/: architect.md  coder.md  default.md  reviewer.md  teacher.md
config/.aicode/workspace/: AGENTS.md
config/.prosophor/: settings.json
config/.prosophor/roles/: architect.md  coder.md  default.md  reviewer.md  teacher.md
docs/: ARCHITECTURE.md  CONFIGURATION.md
main_src/: CMakeLists.txt  main.cc
main_src/agents/: plan_mode.cc  plan_mode.h  subagent_coordinator.cc  subagent_coordinator.h  task_manager.cc  task_manager.h
main_src/cli/: AGENTS.md  agent_commander.cc  agent_commander.h  command_registry.cc  command_registry.h  input_handler.cc  input_handler.h  input_handler_posix.cc  input_handler_win32.cc  input_manager.h  output_manager.cc  output_manager.h  terminal_input.cc
main_src/common/: banner.cc  banner.h  config.cc  config.h  constants.h  curl_client.cc  curl_client.h  effort_config.cc  effort_config.h  file_utils.cc  input_event.h  input_queue.h  local_model_utils.cc  local_model_utils.h  log_wrapper.h  messages_schema.h  noncopyable.h  string_utils.cc  subprocess_wrapper.cc  thread_pool.h  time_wrapper.h  tts_speaker.cc
main_src/components/: chat_panel.cc  chat_panel.h  input_panel.cc  input_panel.h  status_bar.cc  status_bar.h  ui_panel.cc  ui_panel.h  ui_types.h
main_src/core/: agent_commander.cc  agent_commander.h  agent_core.cc  agent_core.h  agent_role.h  agent_session.h  agent_state.cc  agent_state.h  agent_state_visualizer.h  compact_service.cc  compact_service.h  memory_consolidation_service.cc  memory_consolidation_service.h  messages_schema.h  reference_parser.cc  reference_parser.h  skill_loader.cc  skill_loader.h  system_prompt.cc  system_prompt.h
main_src/managers/: active_interaction_manager.cc  active_interaction_manager.h  active_trigger_manager.cc  agent_role_loader.cc  agent_role_loader.h  agent_session_manager.cc  agent_session_manager.h  background_task_manager.cc  background_task_manager.h  buddy_manager.cc  buddy_manager.h  buddy_types.cc  buddy_types.h  local_model_manager.cc  local_model_manager.h  memory_manager.cc  memory_manager.h  permission_manager.cc  permission_manager.h  plugin_manager.cc  plugin_manager.h  session_manager.cc  session_manager.h  skill_loader.cc  skill_loader.h  token_tracker.cc  token_tracker.h  worktree_manager.cc  worktree_manager.h
main_src/mcp/: mcp_client.cc  mcp_client.h
main_src/media_engine/: CMakeLists.txt  media_engine.h
main_src/media_engine/media/: audior.h  colors.h  drawer.h  font.h  imgui_widget.h  media_core.h  texture.h
main_src/media_engine/sdl_interface/: audior.cc  drawer.cc  font.cc  imgui_widget.cc  media_core.cc  sdl_common.cc  sdl_common.h  texture.cc
main_src/media_engine/ui_component/: header_bar.cc  header_bar.h  input_panel.cc  input_panel.h  ui_container.cc  ui_container.h  ui_panel.cc  ui_panel.h
main_src/platform/: input_handler.h  input_handler_posix.cc  input_handler_win32.cc  platform.cc  platform.h
main_src/providers/: anthropic_provider.cc  anthropic_provider.h  llm_provider.cc  llm_provider.h  ollama_provider.cc  ollama_provider.h  openai_provider.cc  openai_provider.h  provider_router.cc  provider_router.h  qwen_provider.cc  qwen_provider.h
main_src/providers/detail/: anthropic_stream_handler.h  ollama_stream_handler.h  openai_stream_handler.h
main_src/scene/: agent_state_observer.cc  agent_state_observer.h  anime_character.cc  anime_character.h  asset_define.h  character_sprite.cc  character_sprite.h  character_state_observer.cc  character_state_observer.h  galgame_mode.cc  galgame_mode.h  home_screen.cc  home_screen.h  layout_config.h  office_background.cc  office_background.h  office_character_manager.cc  office_character_manager.h  pixel_character.cc  pixel_character.h  sdl_app.cc  sdl_app.h  ui_renderer.cc  ui_renderer.h
main_src/services/: cron_scheduler.cc  cron_scheduler.h  lsp_manager.cc  lsp_manager.h
main_src/tools/: agent_tool.cc  ask_user_question_tool.cc  ask_user_question_tool.h  background_run_tool.cc  cron_tool.cc  cron_tool.h  glob_tool.cc  grep_tool.cc  grep_tool.h  lsp_tool.cc  lsp_tool.h  task_tool.cc  task_tool.h  todo_write_tool.cc  todo_write_tool.h  tool_registry.cc  tool_registry.h  worktree_tool.cc  worktree_tool.h
main_src/tools/agent_tools/: agent_tool.cc  agent_tool.h
main_src/tools/command_tools/: background_run_tool.cc  background_run_tool.h
main_src/tools/interaction_tools/: ask_user_question_tool.cc
main_src/tools/lsp_tools/: lsp_tool.cc
main_src/tools/search_tools/: glob_tool.cc  glob_tool.h  grep_tool.cc
main_src/tools/task_tools/: cron_tool.cc  task_tool.cc  todo_write_tool.cc  todo_write_tool.h
main_src/tools/worktree_tools/: worktree_tool.cc
tests/: CMakeLists.txt  buddy_manager_test.cc  compact_service_test.cc  cron_scheduler_test.cc  main.cc  permission_manager_test.cc  skill_loader_test.cc  task_manager_test.cc  tool_registry_test.cc
tool/: verify.sh
tools/: verify.sh
